Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateImpl.ru
struct Hola{}
impl Hola{
.(){}}
impl Hola{
.(){}}
start{}